Start work on chat filtering Link filtering is finished
