# swagger.json
@@ -244,6 +244,61 @@
           }
         }
       }
+    },
+    "/minecraft/chat/analyze": {
+      "post": {
+        "description": "Analyze a chat message for inappropriate text, links, etc.",
+        "tags": [
+          "minecraft-chat"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "chat body",
+          "required": true,
+          "content": {
+            "application/json": {
+              "example": {
+                "uuid": "9ab3b4c4-71d8-47c9-9e7d-adf040c53d2b",
+                "rank": "owner",
+                "message": "Hello world!",
+                "server": "Creative"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "returns array of packs",
+            "content": {
+              "application/json": {
+                "example": {
+                  "packs": [
+                    {
+                      "name": "WDW",
+                      "versions": [
+                        {
+                          "id": 340,
+                          "url": "https://packs.palace.network/?p=wdw_1_12",
+                          "hash": "a52009079f83673ee85202a172aed1712da96a84"
+                        },
+                        {
+                          "id": 404,
+                          "url": "https://packs.palace.network/?p=wdw_1_13",
+                          "hash": "b43115b846853bb65b08e200cfe560f7a2188d4d"
+                        }
+                      ]
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
